# android_wallet

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/tech/nextcash/nextcashwallet/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: nextcash_jni.cpp  nextcash_jni.hpp
app/src/main/java/tech/nextcash/nextcashwallet/: AddWalletActivity.java  AddressBook.java  AddressBookAdapter.java  AddressData.java  AddressLabel.java  AddressLabelAdapter.java  Bitcoin.java  BitcoinJob.java  BitcoinLoader.java  BitcoinRunnable.java  BitcoinService.java  Block.java  Button.java  CreateAddressTask.java  CreateKeyTask.java  CreatePaymentRequestTask.java  CreateQRCode.java  CreateTransactionTask.java  ExchangeRateRequestTask.java  FiatRateRequestTask.java  FinishPaymentRequestTask.java  FullTransaction.java  GainLossAdapter.java  GetPaymentRequest.java  GetTransactionTask.java  HistoricalExchangeRateRequestTask.java  ImageButton.java  ImportEncodedKeyTask.java  ImportKeyTask.java  Input.java  KeyData.java  MainActivity.java  MainApp.java  MainService.java  Messages.java  NextCash.java  Outpoint.java  Output.java  ParseEntity.java  PaymentRequest.java  (+15 more)
app/src/main/res/drawable/: button_background.xml  control_button_background.xml  item_background.xml  loading_background.xml  message_background.xml  negative_button_background.xml  notification_background.xml  pin_button_background.xml  pin_dot.xml  scan_box.xml  scan_line.xml  seed_word_button_background.xml  text_background.xml  undo_button_background.xml
app/src/main/res/layout/: activity_add_wallet.xml  activity_main.xml  activity_settings.xml  add_wallet.xml  add_wallet_buttons.xml  address_book.xml  address_book_item.xml  address_book_manual_add.xml  address_label_item.xml  address_label_manual_add.xml  address_labels.xml  amount_dialog.xml  block_chain_loading.xml  button.xml  clipboard_payment_code.xml  create_wallet.xml  date_dialog.xml  derivation_path.xml  edit_name.xml  edit_wallet.xml  enter_payment_code.xml  enter_seed.xml  gain_loss.xml  gain_loss_item.xml  import_bip32_key.xml  info.xml  initial_block_download_message.xml  input.xml  instructions.xml  loading_progress.xml  negative_button.xml  output.xml  passcode.xml  persistent_message.xml  pin_dot.xml  pin_entry.xml  progress_notification.xml  public_keys.xml  receive.xml  report_cell.xml  (+15 more)
app/src/main/res/layout-w360dp/: edit_wallet.xml  send_payment.xml  wallet_settings.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/mipmap-anydpi/: launcher_icon.xml
app/src/main/res/mipmap-anydpi-v26/: launcher_icon.xml
app/src/main/res/values/: colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-w360dp/: dimens.xml
app/src/main/res/xml/: backup.xml  provider_files.xml
app/src/test/java/tech/nextcash/nextcashwallet/: BitcoinTest.java  ExampleUnitTest.java  NextCashTest.java
gradle/wrapper/: gradle-wrapper.properties
